--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "dyz-lunck",
-  "version": "1.0.0",
-  "description": "dyz-lunck",
-  "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/csj666/dyz-lunck.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/csj666/dyz-lunck/issues"
-  },
-  "homepage": "https://github.com/csj666/dyz-lunck#readme",
-  "devDependencies": {
-    "gulp": "^4.0.0"
-  }
+    "name": "dyz-lunck",
+    "version": "1.0.0",
+    "description": "dyz-lunck",
+    "main": "gulpfile.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "gulp dev"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/csj666/dyz-lunck.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/csj666/dyz-lunck/issues"
+    },
+    "homepage": "https://github.com/csj666/dyz-lunck#readme",
+    "devDependencies": {
+        "gulp": "^4.0.0"
+    }
 }
